...
        radioButton.padding.right = 16
        radioButton.size = 28
        radioButton.tintColors = [.selected: .Button.primaryBackground, .deselected: .Icon.tertiary]
        radioButton.isEnabled = isEnable
        radioButton.isSelected = isSelected
        radioButton.isUserInteractionEnabled = false
        radioButton.accessibilityIdentifier = "radio"
        return radioButton
    }

    func createLayout() -> UICollectionViewCompositionalLayout {
        let configuration = UICollectionViewCompositionalLayoutConfiguration()
        configuration.scrollDirection = .vertical
...
