...
                    self.isSwapAnimating = false
                }
            },
            for: .touchUpInside
        )

        swapButton.accessibilityIdentifier = "switch_button"
    }

    private func setupContinueButton() {
        var continueButtonConfiguration = TKButton.Configuration.actionButtonConfiguration(
            category: .primary,
            size: .large
...
