...
        public enum Future {
            /// Renew Domain
            public static let domainRenew = TKLocales.tr("Localizable", "action_types.future.domain_renew", fallback: "Renew Domain")
            /// Receive
            public static let receive = TKLocales.tr("Localizable", "action_types.future.receive", fallback: "Receive")
            /// Send
            public static let send = TKLocales.tr("Localizable", "action_types.future.send", fallback: "Send")
            /// Swap
            public static let swap = TKLocales.tr("Localizable", "action_types.future.swap", fallback: "Swap")
        }
    }

    public enum Actions {
        /// Burn NFT
        public static let burnNft = TKLocales.tr("Localizable", "actions.burn_nft", fallback: "Burn NFT")
        /// Cancel
        public static let cancel = TKLocales.tr("Localizable", "actions.cancel", fallback: "Cancel")
        /// Continue
        public static let continueAction = TKLocales.tr("Localizable", "actions.continue_action", fallback: "Continue")
        /// Copy
        public static let copy = TKLocales.tr("Localizable", "actions.copy", fallback: "Copy")
        /// Delete
        public static let delete = TKLocales.tr("Localizable", "actions.delete", fallback: "Delete")
        /// Done
        public static let done = TKLocales.tr("Localizable", "actions.done", fallback: "Done")
...
            public static let max = TKLocales.tr("Localizable", "common.numbers.max", fallback: "MAX")
        }
    }

    public enum ConfirmSend {
        /// Amount
        public static let amount = TKLocales.tr("Localizable", "confirm_send.amount", fallback: "Amount")
        /// Comment
        public static let comment = TKLocales.tr("Localizable", "confirm_send.comment", fallback: "Comment")
        /// Confirm
        public static let confirm = TKLocales.tr("Localizable", "confirm_send.confirm", fallback: "Confirm")
        /// Confirm and send
        public static let confirmButton = TKLocales.tr("Localizable", "confirm_send.confirm_button", fallback: "Confirm and send")
...
            public static let title = TKLocales.tr("Localizable", "finish_setup.backup.title", fallback: "Back up your recovery phrase")
        }
    }

    public enum History {
        /// History
        public static let title = TKLocales.tr("Localizable", "history.title", fallback: "History")
        public enum Event {
            public enum Comment {
                /// More
                public static let more = TKLocales.tr("Localizable", "history.event.comment.more", fallback: "More")
            }
        }
...
    public enum NftDetails {
        /// About collection
        public static let aboutCollection = TKLocales.tr("Localizable", "nft_details.about_collection", fallback: "About collection")
        /// Contract address
        public static let contractAddress = TKLocales.tr("Localizable", "nft_details.contract_address", fallback: "Contract address")
        /// Details
        public static let details = TKLocales.tr("Localizable", "nft_details.details", fallback: "Details")
        /// Domain is on sale at the marketplace now. For transfer, you should remove it from sale first.
        public static let domainOnSaleDescription = TKLocales.tr("Localizable", "nft_details.domain_on_sale_description", fallback: "Domain is on sale at the marketplace now. For transfer, you should remove it from sale first.")
        /// Expiration date
        public static let expirationDate = TKLocales.tr("Localizable", "nft_details.expiration_date", fallback: "Expiration date")
        /// Expires in %@ days
        public static func expiresInDays(_ p1: Any) -> String {
...
                    /// Solana
                    public static let title = TKLocales.tr("Localizable", "receive.multichain.networks.solana.title", fallback: "Solana")
                }

                public enum Ton {
                    /// TON
                    public static let title = TKLocales.tr("Localizable", "receive.multichain.networks.ton.title", fallback: "TON")
                }

                public enum Tron {
                    /// TRON
                    public static let title = TKLocales.tr("Localizable", "receive.multichain.networks.tron.title", fallback: "TRON")
                }
...
            /// Need help?
            public static let title = TKLocales.tr("Localizable", "support.support_popup.title", fallback: "Need help?")
            public enum Buttons {
                /// Ask on Telegram
                public static let ask = TKLocales.tr("Localizable", "support.support_popup.buttons.ask", fallback: "Ask on Telegram")
                /// Close
                public static let close = TKLocales.tr("Localizable", "support.support_popup.buttons.close", fallback: "Close")
                /// Contact by email
                public static let email = TKLocales.tr("Localizable", "support.support_popup.buttons.email", fallback: "Contact by email")
            }
        }
    }

...
