...
            case let .listItem(listItem):
                let configuration = viewModel.getListItemCellConfiguration(identifier: listItem.identifier) ?? .default
                let cell = collectionView.dequeueConfiguredReusableCell(using: listCellRegistration, for: indexPath, item: configuration)
                cell.leftAccessoryViews = []
                cell.defaultAccessoryViews = [TKListItemAccessory.chevron.view]
                if listItem.identifier == "history_item" {
                    cell.accessibilityIdentifier = "battery_charges_history"
                } else {
                    cell.accessibilityIdentifier = nil
                }
                return cell
            case let .inAppPurchase(purhaseItem):
                let configuration = viewModel.getInAppPurchaseCellConfiguration(identifier: purhaseItem.identifier) ?? .default
...
