...
        scanConfiguration.padding.right = 16
        scanConfiguration.action = { [weak viewModel] in
            viewModel?.didTapRecipientScanButton()
        }
        customView.recipientScanButton.configuration = scanConfiguration

        customView.recipientTextField.accessibilityIdentifier = "input_field"
        customView.amountInputView.amountTextField.accessibilityIdentifier = "amount"

        let tapGestureRecognizer = UITapGestureRecognizer(target: self, action: #selector(viewTapGestureHandler))
        tapGestureRecognizer.delegate = self
        customView.addGestureRecognizer(tapGestureRecognizer)
    }
...
