appId: com.jbig.tonkeeper
---
- launchApp:
    clearState: true

- runFlow: ../../steps/import_wallet.yaml
- runFlow: ../../service/account/compare_ton_balance.yaml

- tapOn:
    id: wallet_battery
- scrollUntilVisible:
    element:
      text: Recharge with TON
- tapOn: Recharge with TON
- tapOn:
    id: radio
    index: 2
- tapOn: Continue
- assertVisible: battery.ton
- swipe:
    from:
      id: confirm_swipe
    direction: RIGHT
    duration: 2000

- runFlow: ../../steps/password/enter_password.yaml
- assertVisible: History
- runFlow: ../../service/history/find_last_ton_transaction.yaml
