appId: com.jbig.tonkeeper
---
- launchApp:
    clearState: true

- runFlow: "../../steps/import_wallet.yaml"
- runFlow: "../../service/account/compare_ton_balance.yaml"

- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible: Collectibles
    timeout: 120000
- tapOn: Collectibles
- tapOn: biba-and-boba.ton

- scrollUntilVisible:
    element: "biba-and-boba.ton"
- scrollUntilVisible:
    element: "TON DNS Domains"
- scrollUntilVisible:
    element: Transfer
- scrollUntilVisible:
    element: Manage

- runScript:
    file: ../../scripts/api/v2/accounts/dns/getExpiring.js
    env:
      _dns: 0:90cfeb684f0e26bb0a6d72029508dd37d0d6d33ea995da3fb067ede3a651d43f
      auth_token: ${auth}
- evalScript: ${output.buttonRenew = 'Renew until ' + output.dns[0].expired.renewFormatted}
- evalScript: ${output.latestExpiredUnix = output.dns[0].expired.unix}

- scrollUntilVisible:
    element: ${output.buttonRenew}
- tapOn: ${output.buttonRenew}
- waitForAnimationToEnd:
    timeout: 5000
- swipe:
    from:
      id: confirm_swipe
    direction: RIGHT
    duration: 2000

- runFlow: ../../steps/password/enter_password.yaml
- waitForAnimationToEnd:
    timeout: 8000
- assertVisible: biba-and-boba.ton

- runFlow: ../../steps/nfts/dns/link_domain.yaml
- runScript:
    file: ../../scripts/api/v2/accounts/dns/findByDNS.js
    env:
      _dns: biba-and-boba
      auth_token: ${auth}
- evalScript: ${output.domainSet = output.pubkey !== undefined}
- assertTrue:
    condition: ${output.domainSet}
    label: Public key should be set after link

- runScript:
    file: ../../scripts/api/v2/accounts/dns/getExpiring.js
    env:
      _dns: 0:90cfeb684f0e26bb0a6d72029508dd37d0d6d33ea995da3fb067ede3a651d43f
      auth_token: ${auth}
- evalScript: ${output.expiredUnixChanged = output.latestExpiredUnix < output.dns[0].expired.unix}
- assertTrue:
    condition: ${output.expiredUnixChanged}
    label: Expiry timestamp should change after renew

- assertVisible: "History"
- tapOn: Collectibles
- tapOn: biba-and-boba.ton
- runFlow: ../../steps/nfts/dns/unlink_domain.yaml
