appId: com.jbig.tonkeeper
---
- launchApp:
    clearState: true
- runFlow: "../../steps/import_wallet.yaml"

- openLink:
    link: "https://app.tonkeeper.com/swap?ft=USDT&tt=TON"

- tapOn: "MAX"
- assertVisible: "Remaining: 0 USD₮"
- tapOn: "Continue"

- swipe:
    from:
      id: confirm_swipe
    direction: RIGHT
    duration: 2000
- tapOn: "Continue"
- runFlow: ../../steps/password/enter_password.yaml
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: "History"
- tapOn:
    id: "ic-chevron-left-16"
- tapOn: "USD\u20ae"
- assertNotVisible: "Your balance"
