appId: com.jbig.tonkeeper.dev
---
- tapOn: Create new wallet
- assertVisible: Create passcode
- repeat:
    times: 4
    commands:
      - tapOn: ${PASSWORD_KEY}

- assertVisible: Re-enter passcode
- repeat:
    times: 4
    commands:
      - tapOn: ${PASSWORD_KEY}

- tapOn: Later

- assertVisible: Customize your Wallet
- assertVisible: Wallet
- tapOn:
    id: hand-raised-16
- tapOn: "Continue"
- assertVisible: "Your address: UQ.*"
- assertVisible: "$\u20090.00"

