appId: com.jbig.tonkeeper
---
- launchApp:
    clearState: true

- runFlow: ../../steps/import_wallet.yaml
- runFlow: ../../service/account/compare_ton_balance.yaml

- tapOn:
    id: wallet_battery
- waitForAnimationToEnd:
    timeout: 5000
- scrollUntilVisible:
    centerElement: true
    direction: DOWN
    element:
      id: battery_charges_history
    timeout: 40000
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: battery_charges_history
    waitToSettleTimeoutMs: 5000
    retryTapIfNoChange: true
- tapOn: Details  
- tapOn: Return charges
- tapOn:
    id: close
