appId: com.jbig.tonkeeper
---
- launchApp:
    clearState: true

- runFlow: "../../steps/import_wallet.yaml"
- runFlow: "../../service/account/compare_ton_balance.yaml"

- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible: TON
    timeout: 120000
- tapOn: TON
- tapOn: Send
- tapOn:
    id: input_field
- inputText: ${RECIEVE_WALLET}
- tapOn:
    id: amount
- inputText: "0.001"
- tapOn: Continue

- assertVisible: ${RECIEVE_WALLET}
- assertVisible: "0.001\u2009TON"
- swipe:
    from:
      id: confirm_swipe
    direction: RIGHT
    duration: 2000

- runFlow: "../../steps/password/enter_password.yaml"

- assertVisible: History
- runFlow: "../../steps/history/transaction_cell.yaml"
